# fake_nfvo

./: .gitignore  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py
etc/: api-paste.ini  cfg.ini  vim_pim_config.ini
faked_nfvo/: app.py  token_mgmt.py  wsgi.py
faked_nfvo/api/: api_utils.py  authenticate.py  exception.py  list_subscriptions.py  requestlog.py  versions.py  wsgi.py
faked_nfvo/api/schemas/: pimJobs.py  pim_cm.py  pim_fm.py  pim_pm.py  tokens.py  vimJobs.py  vim_alarm.py  vim_cm.py  vim_fm.py  vim_pm.py
faked_nfvo/api/v1/: list_subcriptions.py  pim_cm.py  pim_fm.py  pim_pm.py  router.py  token.py  vimJobs.py  vim_cm.py  vim_fm.py  vim_pm.py
faked_nfvo/api/validation/: __init__.py  parameter_types.py  validators.py
faked_nfvo/requests/: pim_request.py  request_utils.py  request_vimpim.py  rest_client.py  vim_request.py
selftests/: request_from_vimpim
systemd/: nfvo-api.service
tests/: pim_cm_test.py  pim_subs_auth.py  pim_subs_test.py  test_utils.py  utils.py  vim_cm_test.py  vim_fm_test.py  vim_pm_test.py  vim_subs_auth.py  vimops_fm_test.py
tools/: generate_pem_cert.py  pim.pem
