[metadata]
name = faked_nfvo
version = 0.7
summary = NFV Orchestrator WSGI Service
description-file =
    README.rst
author = Yingfu Zhou
author-email = zhouyf6@lenovo.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    faked_nfvo
data_files =
    /etc/faked_nfvo/ = etc/*
    /usr/lib/systemd/system/ = systemd/*

[entry_points]
console_scripts = 
    nfvo-api = faked_nfvo.app:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
